deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-api
spec:
  selector:
    matchLabels:
      app: basic-api
  template:
    metadata:
      labels:
        app: basic-api
    spec:
      containers:
      - name: basic-api
        image: basic-api:v1

        ports:
        - containerPort: 80
