deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-api-service
spec:
  selector:
    app: basic-api
  ports:
  - port: 80
    targetPort: 80
