deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-api-ingress
  labels:
    name: basic-api-ingress
spec:
  rules:
  - host: basic.hypertheory.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: basic-api-service
            port: 
              number: 80
